--- a/styles/sponsorsStyle.css
+++ b/styles/sponsorsStyle.css
@@ -82,6 +82,7 @@ footer .col-sm-4 {
 
 .jumbotron {
 	height: 500px;
+	width: 100%;
 	background-color: black;
 	position: relative;
 	z-index: 1;
